--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,28 @@ header .icons #menu-bars{
     background-color: #BCC2C2;
 }
 
+.loader-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background: var(--ghost-white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.loader-container img{
+    width: 35rem;
+}
+
+.loader-container.fade-out{
+    top: 110%;
+    opacity: 0;
+}
 
 
 
