--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ header .icons #menu-bars{
 }
 
 .home .swiper-container .swiper-slide .image {
-    background: #F5F5F5;
+    background: #FAFAFA;
     flex: 1 1 45rem;
 }
 
@@ -178,7 +178,7 @@ header .icons #menu-bars{
 .home .swiper-container .swiper-slide .content h3 {
     color: #0f52ba;
     font-size: 7rem;
-    background: #F5F5F5;
+    background: #FAFAFA ;
 }
 
 .home .swiper-container .swiper-slide .content p {
@@ -207,7 +207,7 @@ header .icons #menu-bars{
 /* Services section */
 .services {
     padding: 50px 0;
-    background-color: #F5F5F5;
+    background-color: #FAFAFA;
 }
 
 .services .sub-heading {
@@ -376,7 +376,7 @@ header .icons #menu-bars{
 /* Contact section */
 .contact {
     padding: 2rem 9%;
-    background-color: #F5F5F5;
+    background-color: #FAFAFA;
 }
 
 .contact .sub-heading {
