--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ header .icons #menu-bars{
     font-size: 2.2rem;
     padding: .5rem 0;
     line-height: 1.5;
+    background: #FAFAFA ;
 }
 
 .home .swiper-container .swiper-slide .content a {
